Fix search suggestions not being visible

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -765,7 +765,7 @@ div.tooltip-inner-custom {
 }
 
 .queryNodeInputSelect div.panel-body {
-    overflow-y: auto;
+    overflow-y: visible;
     max-height: 16em;
 }
 
